clusters/my-cluster/apps/flaga/base/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaga-service
spec:
  selector:
    app: flaga
  ports:
    - name: flask-port
      protocol: TCP
      port: 80
      targetPort: 5000
  # type: LoadBalancer
