clusters/my-cluster/apps/flaga/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ngr
  # annotations:
    # cert-manager.io/issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: komplikter.servehttp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: learn-app-svc
                port:
                  number: 80
